# saco-core

./: .buildinfo  .gitignore  README.rst  calculator.html  data.html  environment.yml  fields.html  genindex.html  index.html  licence.txt  objects.inv  optimiser.html  overview.html  pyproject.toml  reference-calculate.html  reference-dataset.html  reference-optimise.html  search.html  searchindex.js  tutorial.html
.github/workflows/: python-test.yml  sphinx.yml
_sources/: data.rst.txt  fields.rst.txt  index.rst.txt  optimiser.rst.txt  overview.rst.txt  reference-dataset.rst.txt  reference-optimise.rst.txt  tutorial.rst.txt
docs/: calculator.rst  conf.py  data.rst  fields.rst  index.rst  optimiser.rst  overview.rst  reference-calculate.rst  reference-dataset.rst  tutorial.rst
examples/: examples.ipynb
examples/data/: AbsSensBands_NBB.parquet  EFI.parquet  REFS_NBB.parquet  Seasonal_Lookup.parquet  routing_matrix.npz  waterbody_network.graphml
saco/: __init__.py  calculate.py  config.py  dataset.py  efi.py  model.py  optimise.py  refs.py  tables.py  utils.py
tests/: test_calculate.py  test_dataset.py  test_optimise.py  test_tables.py
tests/data/: optimiser_reference.csv
tests/data/01/base/: Discharges_NBB.parquet  GWABs_NBB.parquet  IntegratedWBs_NBB.parquet  Master.parquet  QNaturalFlows_NBB.parquet  SWABS_NBB.parquet  SupResGW_NBB.parquet
tests/data/01/calculator/: Master__capped_net.parquet  Master__capped_simple.parquet  Master__uncapped.parquet
tests/data/01/optimiser/: GWABs_NBB.parquet  Master.parquet  SWABS_NBB.parquet
(+20 files in other folders)
